[gd_scene load_steps=5 format=3 uid="uid://d2tsyhswvh4x"]

[ext_resource type="PackedScene" uid="uid://bker8atbpt2qy" path="res://ui_elements/menu_character.tscn" id="1"]
[ext_resource type="Theme" uid="uid://ufvnlhnloob1" path="res://ui_elements/assets/themes/suspect_ui.tres" id="2"]
[ext_resource type="Script" path="res://ui_elements/appearance/closet.gd" id="3"]
[ext_resource type="Theme" path="res://ui_elements/assets/themes/hidden.tres" id="5"]

[node name="Closet" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2")
script = ExtResource("3")

[node name="MenuMargin" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2")
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="MenuMargin"]
layout_mode = 2

[node name="CharacterBox" type="VBoxContainer" parent="MenuMargin/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MenuCharacter" parent="MenuMargin/HBoxContainer/CharacterBox" instance=ExtResource("1")]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="Character" type="Button" parent="MenuMargin/HBoxContainer/CharacterBox/MenuCharacter"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("5")

[node name="ButtonMargin" type="MarginContainer" parent="MenuMargin/HBoxContainer/CharacterBox"]
layout_mode = 2
theme_override_constants/margin_right = 32

[node name="Buttons" type="VBoxContainer" parent="MenuMargin/HBoxContainer/CharacterBox/ButtonMargin"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 4
theme = ExtResource("2")

[node name="Label" type="Label" parent="MenuMargin/HBoxContainer/CharacterBox/ButtonMargin/Buttons"]
layout_mode = 2
text = "Please select an outfit"

[node name="Select" type="Button" parent="MenuMargin/HBoxContainer/CharacterBox/ButtonMargin/Buttons"]
layout_mode = 2
theme = ExtResource("2")
text = "Select"

[node name="Delete" type="Button" parent="MenuMargin/HBoxContainer/CharacterBox/ButtonMargin/Buttons"]
layout_mode = 2
theme = ExtResource("2")
text = "Delete"

[node name="Back" type="Button" parent="MenuMargin/HBoxContainer/CharacterBox/ButtonMargin/Buttons"]
layout_mode = 2
theme = ExtResource("2")
text = "Back"

[node name="ClosetBox" type="VBoxContainer" parent="MenuMargin/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2")

[node name="LabelCenter" type="CenterContainer" parent="MenuMargin/HBoxContainer/ClosetBox"]
layout_mode = 2

[node name="Label" type="Label" parent="MenuMargin/HBoxContainer/ClosetBox/LabelCenter"]
layout_mode = 2
theme = ExtResource("2")
text = "Customization Closet"

[node name="Panel" type="PanelContainer" parent="MenuMargin/HBoxContainer/ClosetBox"]
custom_minimum_size = Vector2(1344, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2")

[node name="ItemList" type="ItemList" parent="MenuMargin/HBoxContainer/ClosetBox/Panel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2")

[node name="CenterContainer" type="CenterContainer" parent="MenuMargin/HBoxContainer/ClosetBox/Panel"]
layout_mode = 2

[node name="Label" type="Label" parent="MenuMargin/HBoxContainer/ClosetBox/Panel/CenterContainer"]
layout_mode = 2
text = "Save some costumes and they will
appear here!"

[node name="Darken" type="ColorRect" parent="."]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.454902)

[node name="DeleteConfirm" type="PopupPanel" parent="."]
size = Vector2i(516, 333)

[node name="MarginContainer" type="MarginContainer" parent="DeleteConfirm"]
offset_left = 8.0
offset_top = 8.0
offset_right = 508.0
offset_bottom = 325.0

[node name="VBoxContainer" type="VBoxContainer" parent="DeleteConfirm/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="DeleteConfirm/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Delete this appearance?"

[node name="Confirm" type="Button" parent="DeleteConfirm/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Confirm"

[node name="Cancel" type="Button" parent="DeleteConfirm/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="pressed" from="MenuMargin/HBoxContainer/CharacterBox/ButtonMargin/Buttons/Select" to="." method="_on_Select_pressed"]
[connection signal="pressed" from="MenuMargin/HBoxContainer/CharacterBox/ButtonMargin/Buttons/Delete" to="." method="_on_Delete_pressed"]
[connection signal="pressed" from="MenuMargin/HBoxContainer/CharacterBox/ButtonMargin/Buttons/Back" to="." method="_on_Back_pressed"]
[connection signal="item_selected" from="MenuMargin/HBoxContainer/ClosetBox/Panel/ItemList" to="." method="_on_item_selected"]
[connection signal="popup_hide" from="DeleteConfirm" to="." method="_on_Popup_hide"]
[connection signal="pressed" from="DeleteConfirm/MarginContainer/VBoxContainer/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="DeleteConfirm/MarginContainer/VBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
